Issue #2906839 by agoradesign, benjy: Images in tables are rendered way too small (Dompdf)

--- a/css/entity-print.css
+++ b/css/entity-print.css
@@ -11,6 +11,6 @@ body {
   height: auto;
 }
 
-.page td img {
+td img {
   max-width: none;
 }
